[tool.poetry]
name = "repl_python3_Foxhole-Logistics-Bot"
version = "0.1.0"
description = ""
authors = ["samking2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
gspread = "^3.7.0"
google-api-python-client = "^2.15.0"
google-auth-oauthlib = "^0.4.4"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
